--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+  <a href="https://www.linkedin.com/in/tamojay/" class="contact" target='_blank'>made by t.</a>
   <div class="app-title">
     <h3>bonjour.</h3>
   </div>
